--- a/src/index.html
+++ b/src/index.html
@@ -5,256 +5,55 @@
   <style>
   	body {
 	    background-color: rgba(0, 0, 0, .8);
-      margin: 0;
+      margin: 1rem;
 	    color: #fff;
 	    -webkit-app-region: drag;
-			/* -webkit-app-region: no-drag; */
 	    -webkit-user-select: none;
 		}
-		.play-btn{
-			width:40px;
-			height:40px;
-			/* border:solid 1px #999; */
-			text-align: center;
-			vertical-align: middle;
-    	display: table-cell;
-		}
-		.play-btn.active{
-			background:#ccc;
-			color:black;
+		#log{
+			white-space: pre-line;
 		}
 
-		.layer-disp{
-			width:40px;
-			height:40px;
-			text-align: center;
-			vertical-align: middle;
-    	display: table-cell;
-		}
-		.layer-disp.active{
-			background:#ccc;
-			color:black;
-		}
-
-		.audio-disp{
-			width:40px;
-			height:40px;
-			text-align: center;
-			vertical-align: middle;
-    	display: table-cell;
-		}
-		input{
-			-webkit-app-region: no-drag;
-		}
-		input[type="range"] {
-			display: block;
-			-webkit-appearance: none;
-			background-color: rgba(255,255,255,0.1);
-			width: 200px;
-			height: 40px;
-			/* border-radius: 5px; */
-			margin: 0 auto;
-			outline: 0;
-		}
-		input[type="range"]::-webkit-slider-thumb {
-			-webkit-appearance: none;
-			background-color: #ccc;
-			width: 20px;
-			height: 40px;
-			/* border-radius: 50%; */
-			border: 2px solid white;
-			cursor: pointer;
-			transition: .3s ease-in-out;
+		.setting-btn{
+			position:absolute;
+			top:0;
+			right:0;
 		}
   </style>
 </head>
 
 <body>
-  <div id="log">hogehoge</div>
-  
-
-
+	<div id="log"></div>
+	
+	<div class="setting-btn" id="settingBtn" onclick="showModalDialogElement()">⚙</div>
 
 	<dialog id="sample-dialog">
 		<form method="dialog">
-			<span>OSC Out</span>
-			<input type="number" min="0" max="9999999"id="oscOut" placeholder="Port"/><br>
-
-			<span>MIDI 1</span>
-			<input type="number" min="0" max="127"id="cc1" placeholder="cc"/><br>
+			<span>OSC port</span>
+			<input type="number" min="0" max="9999999" id="OSCInPort" placeholder="Port"/><br>
 
 			<button type="submit" value="cancel">Cancel</button>
 			<button type="submit" value="ok">Ok</button>
 		</form>
 	</dialog>
 
-
-
-
 </body>
 <script>
 	var osc = require('node-osc');
+	var OSCInPort = 3333;
+	var log_list = document.querySelector("#log");
+	var OSCLog = new Array(100);
 
-	var sendCount = 0;
-	var oscClient = new osc.Client('127.0.0.1', 7000);
+  var oscServer = new osc.Server(OSCInPort, '127.0.0.1');
+  oscServer.on("message", function (msg, rinfo) {
+    console.log("listening:");
+    console.log(msg);
 
-	var layer1Opacity =  new osc.Message('/composition/layers/1/bypassed');
-	var layer2Opacity =  new osc.Message('/composition/layers/2/bypassed');
-	var layer3Opacity =  new osc.Message('/composition/layers/3/bypassed');
-	var layer4Opacity =  new osc.Message('/composition/layers/4/bypassed');
-	// var layer5Opacity =  new osc.Message('/composition/layers/5/bypassed');
-	// var layer6Opacity =  new osc.Message('/composition/layers/6/bypassed');
-	// var layer7Opacity =  new osc.Message('/composition/layers/7/bypassed');
-	// var layer8Opacity =  new osc.Message('/composition/layers/8/bypassed');
+		OSCLog.unshift(msg);
+		OSCLog.pop();
+		log_list.innerHTML = OSCLog.join('\n');
+  });
 
-	function layerSelect(num){
-		layer1Opacity = new osc.Message('/composition/layers/1/bypassed', 1);
-		layer2Opacity = new osc.Message('/composition/layers/2/bypassed', 1);
-		layer3Opacity = new osc.Message('/composition/layers/3/bypassed', 1);
-		layer4Opacity = new osc.Message('/composition/layers/4/bypassed', 1);
-		// layer5Opacity = new osc.Message('/composition/layers/5/bypassed', 0);
-		// layer6Opacity = new osc.Message('/composition/layers/6/bypassed', 0);
-		// layer7Opacity = new osc.Message('/composition/layers/7/bypassed', 0);
-		// layer8Opacity = new osc.Message('/composition/layers/8/bypassed', 0);
-		if(num == 0){
-		}else if(num == 1){
-			layer1Opacity = new osc.Message('/composition/layers/1/bypassed', 0);
-		}else if(num == 2){
-			layer2Opacity = new osc.Message('/composition/layers/2/bypassed', 0);
-		}else if(num == 3){
-			layer3Opacity = new osc.Message('/composition/layers/3/bypassed', 0);
-		}else if(num == 4){
-			layer4Opacity = new osc.Message('/composition/layers/4/bypassed', 0);
-		}
-		// else if(num == 5){
-		// 	layer5Opacity = new osc.Message('/composition/layers/5/bypassed', 1);
-		// }else if(num == 6){
-		// 	layer6Opacity = new osc.Message('/composition/layers/6/bypassed', 1);
-		// }else if(num == 7){
-		// 	layer7Opacity = new osc.Message('/composition/layers/7/bypassed', 1);
-		// }else if(num == 8){
-		// 	layer8Opacity = new osc.Message('/composition/layers/8/bypassed', 1);
-		// }
-
-		var elements = document.getElementsByClassName("layer-disp active");
-		for(var i = 0; i < elements.length; i ++){
-			elements[i].classList.remove( "active" );
-		}
-
-		if(num > 0 && num < 9){
-			document.getElementById("layer" + num).classList.add("active");
-		}
-		
-		//OSC送信
-		oscClient.send(layer1Opacity);
-		oscClient.send(layer2Opacity);
-		oscClient.send(layer3Opacity);
-		oscClient.send(layer4Opacity);
-		// oscClient.send(layer5Opacity);
-		// oscClient.send(layer6Opacity);
-		// oscClient.send(layer7Opacity);
-		// oscClient.send(layer8Opacity);
-	}
-	var selectLayer = 0;
-
-	function layerStepper(){
-  	var n = (Math.floor(selectLayer/2) + 1 )  *(selectLayer % 2);
-		layerSelect(n);		
-		selectLayer = (selectLayer + 1) % 8;
-	}
-
-	var randomLayer = 0;
-	function layerRandomSelect(){
-		var newNum = Math.floor(Math.random()*4)+1;
-		while(newNum == randomLayer){
-			newNum = Math.floor(Math.random()*4)+1;
-			console.log(newNum);
-		}
-		randomLayer = newNum;
-		layerSelect(randomLayer);
-	}
-
-
-
-
-  var log_list = document.querySelector("#log");
-  // リストを作成
-  var log_item = document.createElement("li");
-  log_item.innerHTML     = "xxx";
-
-  // さきほど作成したdivの末尾に追加
-  log_list.appendChild(log_item);
-
-  console.log(log_list);
-
-
-
-
-
- 	var controlType = 0;
-	//  0 : stop
-	//  1 : play step
-	//  2 : fader
-	//  3 : random
-
-	function controlTypeSelect(num, e){
-		controlType = num; 
-		var elements = document.getElementsByClassName("play-btn active");
-		for(var i = 0; i < elements.length; i ++){
-			elements[i].classList.remove( "active" );
-		}
-		e.classList.add("active");
-	}
-	document.getElementById("stopBtn").onclick = function() {
-		controlTypeSelect(0,this);
-		//停止時にbypass解除
-		layer1Opacity = new osc.Message('/composition/layers/1/bypassed', 0);
-		layer2Opacity = new osc.Message('/composition/layers/2/bypassed', 0);
-		layer3Opacity = new osc.Message('/composition/layers/3/bypassed', 0);
-		layer4Opacity = new osc.Message('/composition/layers/4/bypassed', 0);
-		oscClient.send(layer1Opacity);
-		oscClient.send(layer2Opacity);
-		oscClient.send(layer3Opacity);
-		oscClient.send(layer4Opacity);
-	};
-	document.getElementById("playBtn").onclick = function() {
-		controlTypeSelect(1,this);
-	};
-	document.getElementById("faderBtn").onclick = function() {
-		controlTypeSelect(2,this);
-	};
-	document.getElementById("randomBtn").onclick = function() {
-		controlTypeSelect(3,this);
-	};
-	document.getElementById("audioBtn").onclick = function() {
-		controlTypeSelect(4,this);
-	};
-
-	var frameCount = 0;
-	(function loop(){
-		window.requestAnimationFrame(loop);
-		//再描画時の処理
-		frameCount ++;
-		
-		if(controlType == 1){   //stepの場合
-			if(frameCount > (127-faderCtrlVal)/8+1){
-				layerStepper();
-				frameCount = 0;
-			}
-		}else if(controlType == 2){  //faderの場合
-			layerSelect(Math.floor(faderCtrlVal/25.5));
-		}else if(controlType == 3){  //randomの場合
-			if(frameCount >(127-faderCtrlVal)/8+1){
-				layerRandomSelect();
-				frameCount = 0;
-			}
-		}else if(controlType == 4){  //audioの場合
-			var val = Math.floor((faderCtrlVal+1) * getByteFrequencyDataAverage()/8000);
-			layerSelect(Math.min(val, 4));
-			// elVolume.innerHTML = val;
-		}
-
-	})();
 
 	////////////////////////////////////////////////////////////////////////////////
   //MIDI
@@ -309,55 +108,6 @@
 	}
 
 
-	////////////////////////////////////////////////////////////////////////////////
-  // Audio
-	////////////////////////////////////////////////////////////////////////////////
-
-
-
-	var audioCtx, analyser, frequencies, getByteFrequencyDataAverage, elVolume, draw;
-
-	window.AudioContext = window.AudioContext || window.webkitAudioContext;
-	audioCtx = new AudioContext();
-
-	analyser = audioCtx.createAnalyser();
-	frequencies = new Uint8Array(analyser.frequencyBinCount);
-
-	getByteFrequencyDataAverage = function() {
-		analyser.getByteFrequencyData(frequencies);
-		return frequencies.reduce(function(previous, current) {
-			return previous + current;
-		}) / analyser.frequencyBinCount;
-	};
-
-	navigator.mediaDevices.getUserMedia({audio: true})
-		.then(function(stream) {
-			window.hackForMozzila = stream;
-			audioCtx.createMediaStreamSource(stream)
-				// AnalyserNodeに接続
-				.connect(analyser);
-		})
-		.catch(function(err) {
-			console.log(err.message);
-		});
-
-	// 音量を表示する要素
-	// elVolume = document.getElementById('volume');
-
-  ////////////////////////////////////////////////////////////////////////////////
-  // Slider GUI
-	////////////////////////////////////////////////////////////////////////////////
-	var sliderElem = document.querySelector('input[type="range"]');
-
-	var rangeValue = function(){
-		var newValue = sliderElem.value;
-		var target = document.querySelector('.value');
-		target.innerHTML = newValue;
-		faderCtrlVal = newValue;
-	}
-
-	sliderElem.addEventListener("input", rangeValue);
-
   ////////////////////////////////////////////////////////////////////////////////
   // Dialog
 	////////////////////////////////////////////////////////////////////////////////
@@ -374,9 +124,8 @@
 	function showModalDialogElement() {
 		'use strict';
 
-		document.querySelector('#OSCOut').value = OSCOut;
-		document.querySelector('#cc1').value = cc1;
-
+		// document.querySelector('#OSCOut').value = OSCOut;
+		document.querySelector('#OSCInPort').value = OSCInPort;
 
 		return new Promise((resolve, reject) => {
 			dlg.showModal();
@@ -388,10 +137,25 @@
 					// alert(inputValue);//テストのためalert
 					// resolve(inputValue);//入力値をresolve
 
-					OSCOut = document.querySelector('#OSCOut').value;
-					oscClient = new osc.Client('127.0.0.1', OSCOut);
+					OSCInPort = document.querySelector('#OSCInPort').value;
+					// oscClient = new osc.Client('127.0.0.1', OSCOut);
 
-					cc1 = document.querySelector('#cc1').value;
+					// cc1 = document.querySelector('#cc1').value;
+
+					oscServer.kill("message", function (msg, rinfo) {
+					});
+
+
+					// oscServer = new osc.Server(OSCInPort, '127.0.0.1');
+
+					// oscServer.on("message", function (msg, rinfo) {
+					// 	// console.log("listening:");
+					// 	// console.log(msg);
+					// 	OSCLog.unshift(msg);
+					// 	OSCLog.pop();
+					// 	log_list.innerHTML = OSCLog.join('\n');
+					// });
+
 				} else {
 					reject();
 				}
